After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646517 - "Sending message (completed)" ellipsized in French
"Sending message (completed)" ellipsized in French
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkLabel
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 647649 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-04-02 09:50 UTC by Milan Bouchet-Valat
Modified: 2011-04-19 17:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
label: we can't ignore sizes on ellipsized labels (1.35 KB, patch)
2011-04-03 14:09 UTC, Benjamin Otte (Company)
none Details | Review

Description Milan Bouchet-Valat 2011-04-02 09:50:17 UTC
When you send a mail, first text says "Sending message" and the spinner is shown. When it's completed, the text changes to "Sending message (completed)", whose French translation is apparently too long for the label: the text is ellipsized and ridiculously says "Envoi du message (...". Other languages are likely to be affected too.

Since there's plenty of space left, I guess it would be easy to fix this by letting the label expand as needed.


This is with git master from March 31.
Comment 1 Matthew Barnes 2011-04-02 18:19:30 UTC
I can't reproduce this using Evolution built from git master and gtk+ 3.0.6.

I started composing a new mail using the French locale, made the composer window as narrow as possible and sent a message.  Didn't see any ellipsizing going on in the status messages.
Comment 2 Milan Bouchet-Valat 2011-04-02 23:03:11 UTC
Well, I really don't know what to say... There have only been a handful of commits in Evo since then, none relating to this bug. I'm using GTK3 master, so there may have been a change since 3.0.6, but... I'll try again with plain 3.0.6, just in case a regression was introduced recently (there are changes about GtkLabel).
Comment 3 Milan Bouchet-Valat 2011-04-03 09:54:30 UTC
Actually that's a very recent regression in GTK+:

6ba3ef5d823d7ffbee86923782d65b4eb1b60668 is the first bad commit
commit 6ba3ef5d823d7ffbee86923782d65b4eb1b60668
Author: Benjamin Otte <otte@redhat.com>
Date:   Tue Mar 29 03:16:34 2011 +0200

    label: Add optimization for a common special case
    
    Oftentimes we want to measure a layout that is as wide or wider than the
    current layout's maximal width. In that case we can safely reuse the
    current layout.

:040000 040000 7d02d479a0dd823f7c9dac178ba0cec94b00fd97 b4e06cc73b8eb56ffda2a2e74bb695b9e3a36b62 M	gtk


Company: this is the first bad commit, but during the bisect, I experienced even weirder labels, that were fully ellipsized (i.e. "..."). Though maybe you already know some individual commits are broken.
Comment 4 Benjamin Otte (Company) 2011-04-03 14:09:59 UTC
Created attachment 185023 [details] [review]
label: we can't ignore sizes on ellipsized labels

So don't use this optimization when a label is ellipsized.
Comment 5 Benjamin Otte (Company) 2011-04-14 12:59:44 UTC
*** Bug 647649 has been marked as a duplicate of this bug. ***
Comment 6 Benjamin Otte (Company) 2011-04-14 13:01:05 UTC
Whoops, forgot to push this.

http://git.gnome.org/browse/gtk+/commit/?id=8632ec43eb54035457de9dae00c45bdf9b0e5f4e
Comment 7 Milan Bouchet-Valat 2011-04-19 17:58:25 UTC
...and you forgot to close it! I've checked the fix works for my test case.