label: we can't ignore sizes on ellipsized labels

So don't use this optimization when a label is ellipsized.

https://bugzilla.gnome.org/show_bug.cgi?id=646517